Added More Info
More information is added to make interested readers happier.

--- a/experiments/2_criteo_exp.ipynb
+++ b/experiments/2_criteo_exp.ipynb
@@ -70,6 +70,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note:\n",
+    "`ads_f_name` is the address (directory+filename) of the created dataset that you chose in`create_datasets.ipynb`. If you do not use our default `train_1000000000_rows`, then you also need to set `ads_build` to `True` for the first time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
