--- a/experiments/Criteo/criteo_dataset/create_datasets.ipynb
+++ b/experiments/Criteo/criteo_dataset/create_datasets.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "### Note:\n",
     "Before running this you need to download datasets from this address:\n",
-    "http://labs.criteo.com/2014/02/kaggle-display-advertising-challenge-dataset//"
+    "http://labs.criteo.com/2014/02/kaggle-display-advertising-challenge-dataset//\n",
+    "\n",
+    "Then, you need to choose your desired `nrows`. In our paper we use `nrows=1000000000`."
    ]
   },
   {
@@ -54,7 +56,9 @@
     "    \n",
     "    data.to_csv(data_type+\"_\"+str(nrows)+\"_rows.csv\", index=False)\n",
     "    print(data.shape)\n",
-    "nrows = 10000000\n",
+    "\n",
+    "##### Please choose your desired number of rows \n",
+    "nrows = 1000000000\n",
     "create_dataset(nrows, data_type=\"train\")"
    ]
   },
@@ -64,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_csv(\"train.csv\", nrows=nrows)"
+    "pd.read_csv(\"train_\"+str(nrows)+\"_rows.csv\", nrows=nrows)"
    ]
   }
  ],
